--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.4",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.6.1"
   }
 }
